# fastapi_dish_composer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
.github/workflows/: docker_cicd.yml
compose-files/: storages.yaml
fastapi_proj/: __init__.py  config.py  database.py  logger_conf.py  logger_config.json  logger_config_dev.json  logger_setup.py
fastapi_proj/application/: authscheme.py  dependencies.py  main.py  schemas.py
fastapi_proj/application/components/: handlers.py  schemas.py
fastapi_proj/application/recipes/: handlers.py  schemas.py
fastapi_proj/application/recipies/: handlers.py  schemas.py
fastapi_proj/application/users/: handlers.py  schemas.py
fastapi_proj/auth/: config.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
fastapi_proj/domain/enteties/: base.py  component.py  recipe.py  user.py
fastapi_proj/domain/events/: base.py
fastapi_proj/domain/exceptions/: base.py  ingredients.py
fastapi_proj/domain/values/: base.py  components.py  ingredient.py
fastapi_proj/infra/: container.py
fastapi_proj/infra/cache/: basestorages.py  redisstorage.py
fastapi_proj/infra/repositories/converters/: converters.py
fastapi_proj/infra/repositories/recipies/: base.py  mongo.py
fastapi_proj/infra/repositories/users/: base.py  mongo.py
fastapi_proj/logic/: eventbus.py  mediator.py  querymediator.py
fastapi_proj/logic/comands/: base.py  components.py  ingredients.py  recipe.py  users.py
fastapi_proj/logic/converters/: recipes.py
fastapi_proj/logic/events/: base.py
fastapi_proj/logic/exceptions/: base.py  mediator.py
fastapi_proj/logic/queries/: base.py  components.py  recipes.py  users.py
fastapi_proj/middleware/: auth_middleware.py
fastapi_proj/recipe_compose/: models.py  router.py
fastapi_proj/recipies/: models.py  repo.py  router.py  schemas.py
tests/: conftest.py  test_jwt.py
tests/logic/: test_mediator.py
tests/mocks/: commands.py
